# rlft4rl

./: .gitignore  README.md  changelog.md  pyproject.toml  requirements.txt  working_req.txt
config/: grpo.yaml  sft.yaml  sft_unsloth.yaml
notebooks/: custom_mlp_grpo_gpt.ipynb  test_local_api.ipynb  viz_gradients.ipynb
scripts/: eval_llm_policy.py  eval_random_policy.py
src/rlft4rl/: llm_policy.py  prompts.py  sampling.py  utils.py
src/rlft4rl/data/: d4rl.py
src/rlft4rl/policies/: grpo_mlp_policy.py  grpo_mlp_policy_discrete.py  llm_policy.py  mlp_policy.py
src/rlft4rl/post_training/: grpo.py  grpo_d.py  merge_adapter_weights.py  sft.py  sft_compl-only.py  sft_unsloth.py
src/rlft4rl/reward/: functions.py  models.py  reward_functions.py  reward_models.py
viz/: gradient_claude.py
